--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,7 @@
-version: '3.8'
-
 services:
   backend:
     build:
-      context: .
-      dockerfile: backend/Dockerfile
+      dockerfile: Dockerfile
     volumes:
       - ./frames:/app/frames
       - ./output:/app/output
